# robotino_navigation

./: .LICENSE  .gitignore  README.md  dependencies.repos
.buildkite/: pipeline.sh  pipeline.yml
aruco_tracker/: package.xml  setup.cfg  setup.py
aruco_tracker/aruco_tracker/: aruco.py
aruco_tracker/launch/: aruco.launch.py
cbs_nav2/cbs_nav2_planner/src/: cbs_planner_server.cpp
cbs_nav2/cbs_nav2_smac_planner/src/: cbs_smac_planner_2d.cpp  node_2d.cpp
launch/: .navigation_launch.py.swp  bringup_launch.py  localization_launch.py  navigation_launch.py
maps/: fha_field.yaml  map.yaml
motor_move/: CMakeLists.txt  package.xml
motor_move/config/: motor_move.yaml
motor_move/include/motor_move/: mimo.hpp  motor_move.hpp
motor_move/launch/: motor_move_launch.py
motor_move/src/: mimo.cpp  motor_move.cpp
motor_move_msgs/: CMakeLists.txt  package.xml
motor_move_msgs/action/: MotorMove.action
nav2_bringup/: README.md  stuff.patch
nav2_bringup/launch/: bringup_launch.py  collision_monitor_launch.py  navigation_launch.py
nav2_bringup/maps/: fha_field_new.yaml  map.yaml  rcac2023map_closed.yaml
nav2_bringup/params/: collision_monitor_params.yaml  nav2_params.yaml
navigation_interface/: CMakeLists.txt  package.xml
navigation_interface/srv/: JointangleReq.srv
params/: nav2_params.yaml
recovery_behavior/: CMakeLists.txt  behavior_plugin.xml  package.xml
recovery_behavior/include/recovery_behavior/: back_up.hpp  recover_pose.hpp
recovery_behavior/include/recovery_behavior/plugins/action/: recover_pose_action.hpp
recovery_behavior/plugins/action/: recover_pose_action.cpp
recovery_behavior/src/: back_up.cpp  recover_pose.cpp
recovery_msgs/: CMakeLists.txt  package.xml
recovery_msgs/action/: RecoverPose.action
robotino_navigation/: CMakeLists.txt  package.xml
robotino_navigation/behavior_trees/: navigate_to_pose_w_replanning_and_recovery.xml
robotino_navigation/config/: collison_monitor_params.yaml  costmap_filter.yaml  localization_params.yaml  mapf_centralagent.yaml  mapf_navigation.yaml  mps_map_gen.yaml  nav2_params.yaml  robotinobase1_minimal.yaml  robotinobase1_mps_map_gen.yaml  robotinobase1_nav2_params.yaml  robotinobase1_nav2_params_fawkes.yaml  robotinobase1_nav2_params_webots.yaml  robotinobase1_webots.yaml  robotinobase2_mps_map_gen.yaml  robotinobase2_nav2_params.yaml  robotinobase2_nav2_params_fawkes.yaml  robotinobase2_webots.yaml  robotinobase3_mps_map_gen.yaml  robotinobase3_nav2_params.yaml  robotinobase3_nav2_params_fawkes.yaml  robotinobase3_webots.yaml  robotinobase4_mps_map_gen.yaml  robotinobase4_nav2_params.yaml  webots.yaml
robotino_navigation/launch/: costmap_filter.launch.py  mapf_bringup.launch.py  mapf_centralagent.launch.py  mapf_navigation.launch.py  robotino_bringup.launch.py  robotino_collisionmonitor.launch.py  robotino_costmapfilter.launch.py  robotino_localization.launch.py  robotino_map.launch.py  robotino_mapserver.launch.py  robotino_navigation.launch.py  robotino_rviz.launch.py
robotino_navigation/map/: RC2024_map.pgm  RC2024_map_challenges.pgm  RC2024_map_challenges.yaml  RC2024_map_challenges_mod.pgm  RC2024_map_challenges_mod.yaml  RC2024_map_mod.pgm  RC2024_map_mod.yaml  RC2025_GO_map.yaml  RC2025_GO_map_small.pgm  RC2025_GO_map_small_cyan.yaml  RC2025_GO_map_small_magenta.yaml  filter_mask.pgm  filter_mask.yaml  filter_mask_1.pgm  filter_mask_empty.pgm  map.pgm  map.yaml  map_RC2025.pgm  map_RC2025.yaml  map_go.yaml  map_sf.pgm  map_sf.yaml  map_sf_empty.pgm  map_sf_empty.yaml  map_sf_pre_rc2025.pgm  map_sf_pre_rc2025.yaml  map_sf_sim.pgm  map_sf_sim.yaml  map_sf_sim_corri1.pgm  map_sf_sim_corri1.yaml  map_sf_sim_corri2.pgm  map_sf_sim_corri2.yaml  map_sf_sim_empty.yaml  map_webots.yaml
robotino_navigation/robotino_navigation/: __init__.py
robotino_navigation/rviz/: nav2config.rviz  robotino_localization.rviz  robotinobase1_nav2config.rviz  robotinobase2_nav2config.rviz  robotinobase3_nav2config.rviz  robotinobase4_nav2config.rviz
robotino_navigation/scripts/: extract_plan.py  nav2goal_pose.py  test_service_cli.py  test_service_srv.py
robotino_sensors/: CMakeLists.txt  README.md  package.xml
robotino_sensors/config/: ekf.yaml  laserSens_config.yaml  laser_config.yaml  multilaser_config.yaml  robotinobase1.yaml  robotinobase2.yaml  robotinobase3.yaml  robotinobase4.yaml  ukf.yaml
robotino_sensors/launch/: robotino_ekffusion.launch.py  robotino_integratedlaser.launch.py  robotino_multilaser.launch.py  robotino_sensorbringup.launch.py  robotino_singlelaser.launch.py  robotino_ukffusion.launch.py
robotino_sensors/robotino_sensors/: __init__.py  robotino_irscanmerger.py  robotino_joyteleop.py  robotino_laserscan_republisher.py
robotino_sensors/rviz/: integratedlaser_rvizconfig.rviz  lasersens_rvizconfig.rviz  multilaser_rvizconfig.rviz
robotino_slamtoolbox/: CMakeLists.txt  package.xml  setup.cfg  setup.py
robotino_slamtoolbox/config/: map_params.yaml  robotinobase1.yaml  robotinobase2.yaml  robotinobase3.yaml  robotinobase4.yaml  slam_params.yaml
robotino_slamtoolbox/launch/: robotino_slam.launch.py  robotino_slamasync.launch.py  robotino_slamrviz.launch.py
robotino_slamtoolbox/map/: map.data  map.yaml  map_gamefield.data  map_gamefield.pgm  map_gamefield.yaml
robotino_slamtoolbox/rviz/: robotino3_slam.rviz  robotino_localization.rviz  robotinobase1_slam.rviz  robotinobase2_slam.rviz  robotinobase3_slam.rviz  robotinobase4_slam.rviz  slam.rviz
robotino_slamtoolbox/test/: test_copyright.py  test_flake8.py  test_pep257.py
robotino_utils/: CMakeLists.txt  package.xml
robotino_utils/robotino_utils/: RewriteYaml.py  __init__.py
