<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotino_navigation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="saurabh.borse@alumni.fh-aachen.de">srb-jarvis</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>nav2_common</depend>
  <depend>nav2_msgs</depend>
  <depend>action_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ur_interface</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
