<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotino_navigation</name>
  <version>0.1.0</version>
  <description>Configuration of navigation2 stack for the robotion</description>
  <maintainer email="saurabh.borse@alumni.fh-aachen.de">Saurabh Borse</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend condition="$USE_MPS_MAP_GEN != ''">mps_map_gen</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav2_common</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>navigation_interface</exec_depend>
  <exec_depend>example_interfaces</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_collision_monitor</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_smoother</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_behaviors</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_waypoint_follower</exec_depend>
  <exec_depend>nav2_velocity_smoother</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>robotino_utils</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
