<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotino_sensors</name>
  <version>0.1.0</version>
  <description>Process and fuse sensor data from odom, imu and sick lasers. </description>
  <maintainer email="saurabh.borse@alumni.fh-aachen.de">Saurabh Borse</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>

  <exec_depend>robot_localization</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>sick_scan_xd</exec_depend>
  <exec_depend>robotino_utils</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
