<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotino_slamtoolbox</name>
  <version>0.0.0</version>
  <description>"SLAM Tools for the robotino"</description>
  <maintainer email="saurabh.borse@alumni.fh-aachen.de">saurabh-borse</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
